- Tournaments have been added - You can now join the tournaments by talking to "Lisa" at home - fixed bug with not being able to attack players inside a tournament - fixed bug with tournaments not refilling inventory